Tema preparado para começar

--- a/theme/layouts/default.html
+++ b/theme/layouts/default.html
@@ -1,128 +1,12 @@
 {% spaceless %}
 <!doctype html>
 <html data-theme="{{ settings.extension_id }}" data-store="{{ store.id }}" class="page-{{ pages.current }}">
-<head>
+  {% element 'header' %}
 
-    <!-- tray charset -->
-    {{ html.charset() }}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <main class="page-content" role="main">
+    {{ content_for_layout }}
+  </main>
 
-    <!-- tray meta tags -->
-    {{ tray.meta }}
-
-    <!-- tray styles -->
-    {{ tray.styles }}
-
-    <!-- theme styles -->
-    <link rel="stylesheet" href="{{ asset('css/bootstrap/bootstrap.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" type="text/css">
-    <link rel="stylesheet" href="{{ asset('css/theme.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ asset('css/custom.css', {dynamic: true}) }}" type="text/css">
-
-    <style>
-        {{ settings.custom_css }}
-    </style>
-
-    <!-- tray analytics -->
-    {{ tray.analytics }}
-
-    <!-- google tag manager -->
-    {{ googleTagManager.header(pages.current, tagManagerData) }}
-</head>
-<body>
-    {{ googleTagManager.top(pages.current, tagManagerData) }}
-
-    {% element 'snippets/messages' %}
-
-    {% element 'snippets/menu-mobile' %}
-
-    <div class="application">
-
-        {% element 'header' %}
-
-        <main class="site-main container">
-            <div class="row">
-
-                {% if "central" in pages.current %}
-                    {%  element 'sidebar-central' %}
-                {% else %}
-                    {%  element 'sidebar-left' %}
-                {% endif %}
-
-                <section class="page-content col-sm-9">
-                    {{ content_for_layout }}
-                </section>
-
-                {% if pages.current in ['catalog', 'search'] %}
-                    {% if settings.history_position == 1 %}
-                        <section class="products-visited col-sm-12">
-                            <h4>{{ Translation('confira_tambem') }}</h4>
-                            <h3 class="related-title">{{ Translation('produtos_visitados') }}</h3>
-                            {% element 'snippets/history' {
-                                'store.id': store.id,
-                                'pages.current': pages.current,
-                                'category.id': category.id
-                            } %}
-                        </section>
-                    {% endif %}
-                {% endif %}
-            </div>
-        </main>
-
-        {% element 'footer' %}
-
-        {% if settings.hottags_position == 2 %}
-            <div class="tagcloud">
-                <h4>As palavras</h4>
-                <h3>{{ Translation('tags_mais_buscadas') }}</h3>
-                {% for tag in tags %}
-                  <a href="{{ tag.url }}" style="font-size: {{ tag.font_size }}%">{{ tag.word }}</a>
-                {% endfor %}
-            </div>
-        {% endif %}
-
-        {% if pages.current in ['catalog', 'search', 'product'] %}
-            {% if settings.history_position == 2 %}
-                <section class="products-visited col-sm-12">
-                    <h4>{{ Translation('confira_tambem') }}</h4>
-                    <h3 class="related-title">{{ Translation('produtos_visitados') }}</h3>
-                    {% element 'snippets/history' {
-                        'store.id': store.id,
-                        'pages.current': pages.current,
-                        'category.id': category.id
-                    } %}
-                </section>
-            {% endif %}
-        {% endif %}
-
-    </div>
-
-    {% element 'snippets/credits' %}
-
-    <!-- tray -->
-    {% element 'snippets/modal' %}
-    {{ googleTagManager.bottom(pages.current, tagManagerData) }}
-    {{ tray.scripts }}
-    {{
-            html.script({
-                '0' : tray.paths.js ~ 'dist/application.min.js?' ~ utils.assets_version,
-                '1' : tray.paths.js ~ 'init.js?' ~ utils.assets_version
-            })
-    }}
-    {% element 'snippets/pageview' %}
-    {{ store.chat }}
-
-    <!-- theme scripts-->
-    <script type="text/javascript" src="{{ asset('js/slick.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/theme.min.js') }}"></script>
-
-    {% if settings.background_image %}
-    <style>
-        .application{ background-image: url('{{ themePath }}{{ settings.background_image }}'); }
-    </style>
-    {% endif %}
-
-</body>
+  {% element 'footer' %}
 </html>
 {% endspaceless %}
